<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.milenacabrera.sqlitedatabase.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:textSize="30dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"
        android:text="@string/datos_personales"/>


    <EditText
        android:id="@+id/edit_id"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="5dp"
        android:inputType="number"
        android:hint="@string/id"/>


    <EditText
        android:id="@+id/edit_nom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="5dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/nombre"/>


    <EditText
        android:id="@+id/edit_apellido"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="5dp"
        android:hint="@string/apellido"/>


    <EditText
        android:id="@+id/edit_edad"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="5dp"
        android:inputType="number"
        android:hint="@string/edad"/>


    <RadioGroup

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:orientation="horizontal">

        <RadioButton android:id="@+id/radio_c"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/casado" />

        <RadioButton android:id="@+id/radio_s"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:checked="true"
            android:text="@string/soltero"/>
    </RadioGroup>
    <TextView

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:text="@string/genero"/>

    <RadioGroup

        android:id="@+id/radio_g"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:orientation="horizontal">
        <RadioButton android:id="@+id/radio_f"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:checked="true"
            android:text="@string/F" />
        <RadioButton android:id="@+id/radio_m"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:checked="true"
            android:text="@string/M"/>
    </RadioGroup>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:text="@string/idioma"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="1">
        <CheckBox android:id="@+id/checkbox_ingles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/Ingles"/>
        <CheckBox android:id="@+id/checkbox_espanol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginLeft="100dp"
            android:text="@string/Español"/>
    </LinearLayout>
<Button
    android:id="@+id/btn_reg"
    android:layout_width="wrap_content"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:layout_gravity="center"
    android:background="@color/colorPrimary"
    android:textColor="#FFFFFF"
    android:textSize="20sp"
    android:padding="5dp"
    android:text="Registrarse"/>
</LinearLayout>
